# GLPractice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: compile_options.cmake  open_source.cmake
open_source/: CMakeLists.txt  readme.md
open_source/glad/include/glad/: glad.h
open_source/glad/src/: glad.c
src/: CMakeLists.txt  init.cpp  init.h  log.h  main.cpp
